<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left"
    tools:context="aplimovil.david.mimedico.AddActivity">

    <EditText
        android:id="@+id/txt_nom_pa"
        android:hint="@string/txt_nom_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"/>
    <EditText
        android:id="@+id/txt_ced_pa"
        android:hint="@string/pac_ced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"/>
    <EditText
        android:id="@+id/txt_mail_pa"
        android:hint="@string/txt_mail_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"/>

</LinearLayout>
