<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="aplimovil.david.mimedico.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="aplimovil.david.mimedico.LoginActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/item_lore">
    <TextView
        android:textColor="#ffffff"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_login"
        android:layout_marginBottom="10dp"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="30dp"
            />

    <EditText
        android:gravity="center"
        android:textColor="#ffffff"
        android:id="@+id/usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/paddin_small"
        android:hint="@string/txt_user"
        android:textColorHint="#d2cec7"
        />
    <EditText
        android:gravity="center"
        android:textColor="#ffffff"
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/paddin_small"
        android:hint="@string/txt_password"
        android:textColorHint="#d2cec7"
        />

    <Button
        android:background="@drawable/item_lo"
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        />
        </LinearLayout>

</LinearLayout>

